# scop

./: .gitignore  Cargo.toml  valgrind.txt
src/: config.rs  helper.rs  main copy.rs  main.rs  main.rsold  shader.rs  winsdl.rs
src/math/: Mat3.rs  Mat4.rs  Vec2.rs  Vec3.rs  Vec4.rs  lib.rs  mat3.rs  mat4.rs  vec2.rs  vec3.rs  vec4.rs
