[package]
name = "scop"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1"
gl = { version = "0.14.0"}
chrono = "0.4.19"
sdl2 = "0.38.0"

anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "2"
tobj = { version = "4", features = ["log"] }



imagine = "0.5.3"

winit = "0.30.11"
